# mcp-demo

./: .env.example  README.md  client.py  inspector_config.json  pyproject.toml  server.py
